<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="DeleteEditActivityBinding">
        <variable
            name="viewModel"
            type="com.renote.renoteai.ui.deleteedit.viewmodel.DeleteEditViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarLay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50dp"
            android:background="@color/black"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fileNameEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp"
                android:hint="enter file name"
                android:textColorHint="@color/light_grey"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/padding_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.jsibbold.zoomage.ZoomageView
            android:id="@+id/previewImgg"
            android:layout_width="match_parent"
            android:layout_height="0dp"

          android:scaleType="fitXY"
            android:layout_margin="0dp"
            android:background="@color/white"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLay"
            app:layout_constraintBottom_toTopOf="@id/bottomSheetCL"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheetCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cancelDeleteImageView"
                android:layout_width="@dimen/dimen_45dp"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginTop="@dimen/margin_23dp"
                android:src="@drawable/exclamatory_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_13dp"
                android:text="@string/sure_msg"
                android:textAlignment="center"
                android:textColor="@color/text_color_one_bottom_sheet"
                android:textSize="@dimen/text_size_18sp"
                android:fontFamily="@font/red_hat_display"
                app:layout_constraintHorizontal_bias="0.392"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancelDeleteImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/delete_msg"
                android:textAlignment="center"
                android:textColor="@color/text_color_two_bottom_sheet"
                android:textSize="@dimen/text_size_17sp"
android:fontFamily="@font/red_hat_display"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textOne" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/height_25dp"
                android:layout_marginEnd="@dimen/margin_5dp"
                 android:textSize="@dimen/text_size_17sp"
                android:paddingStart="@dimen/view_padding_20"
                android:paddingTop="@dimen/padding_10dp"
                android:paddingEnd="@dimen/view_padding_20"
                android:paddingBottom="@dimen/padding_12dp"
                android:textAllCaps="false"
                android:text="@string/cancel_txt"
                android:fontFamily="@font/redhatdisplay_regular"
                android:textColor="@color/text_color_three_bottom_sheet"
                android:layout_marginBottom="@dimen/margin_40dp"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/margin_23dp"
                android:background="@drawable/rect_help"
                app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTwo"
                android:onClick="@{(view) -> viewModel.onresorceClick(view.getId())}"/>

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/deleteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5dp"
                android:background="@drawable/red_gradient"
                android:textSize="@dimen/text_size_17sp"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:layout_marginEnd="@dimen/margin_23dp"
                android:fontFamily="@font/redhatdisplay_regular"
                android:paddingStart="@dimen/view_padding_20"
                android:paddingTop="@dimen/padding_10dp"
                android:paddingEnd="@dimen/view_padding_20"
                android:paddingBottom="@dimen/padding_12dp"
                android:text="@string/delete_txt"

                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/cancelBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelBtn"
                app:layout_constraintTop_toTopOf="@+id/cancelBtn"
                android:onClick="@{(view) -> viewModel.onresorceClick(view.getId())}"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>