<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.fragments.imports.ImportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/importBackBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/renote_logo"
            app:layout_constraintStart_toEndOf="@+id/importBackBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/renotecompanyname"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/renoteai"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFileName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_border"
            android:hint="Name"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/importBackBtn" />

        <androidx.cardview.widget.CardView
            android:id="@+id/browse"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:elevation="8dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSelected">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    android:src="@drawable/img_upload" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/red_hat_display"
                    android:gravity="center"
                    android:text="@string/browse_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--    <ImageView-->
        <!--        android:id="@+id/box"-->
        <!--        android:layout_width="345dp"-->
        <!--        android:layout_height="345dp"-->
        <!--        android:layout_gravity="center_horizontal"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:background="@drawable/edittext_border"-->
        <!--        android:padding="8dp"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/browse" />-->


        <ImageView
            android:id="@+id/imgSelected"
            android:layout_width="300dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:padding="65dp"
            android:scaleType="fitXY"
            android:src="@drawable/upload_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFileName" />


        <androidx.cardview.widget.CardView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:elevation="5dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="13dp"
            app:cardCornerRadius="66dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/folder">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signupbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/red_hat_display"
                    android:text="@string/save_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/folder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/browse">

            <RelativeLayout
                android:id="@+id/btnFolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="start|center_vertical">

                <ImageView
                    android:id="@+id/folderName"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/folder" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/folderName"
                    android:fontFamily="@font/red_hat_display"
                    android:text="@string/folder_text"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
